--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ h1.color {
 }
 
 h2.color {
-    background: #333399;  
-background: -webkit-linear-gradient(to right, #333399, #ff00cc); 
-background: linear-gradient(to right, #333399, #ff00cc); 
+    background: #005C97;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
     -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
